Fix scrollbar being visible when content isnt overflowing

--- a/src/css/_search.scss
+++ b/src/css/_search.scss
@@ -94,7 +94,7 @@ button.search {
 	}
 }
 .search-results-container {
-	overflow: hidden scroll;
+	overflow-x: hidden;
 	height: calc(100% - var(--search-input-height));
 
 	& .search-result a {
